Tried to fix the Safari color shift issue, got closer ... giving up.

--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -12,53 +12,10 @@
     width: 100%
     height: 100%
     overflow: hidden
-    cursor: ns-resize
+    cursor: grab
 
-    &.cover
-      background-image: url(../images/loading@2x.gif)
-      background-repeat: no-repeat
-      background-position: 50% 50%
-      background-size: 50px 50px
-      opacity: 0
-
-      &.show-cover
-        opacity: 1
-
-        transition: opacity $speed $ease_in
-
-      &.hide-cover
-        opacity: 0
-
-        transition: opacity $speed $ease_out
-
-      // ---------------------------------------------
-      // Shared styles: Cover
-      // ---------------------------------------------
-
-      .cover-wrap
-        position: absolute
-        top: 50%
-        left: 50%
-        width: auto
-        height: auto
-        min-width: 100%
-        min-height: 100%
-        background-repeat: no-repeat
-        background-position: 50% 50%
-        background-size: contain
-        transform: translate(-50%, -50%)
-        opacity: 0
-        transition: opacity $speed_metal linear
-
-        &.roll
-          opacity: 1
-
-        canvas
-          position: absolute
-          top: 0px
-          left: 50%
-
-          transform: translate(-50%, 0)
+    &:active
+      cursor: grabbing
 
     // ---------------------------------------------
     // Shared styles: Picture zone
